// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationSearchForm renders  component 1`] = `
<StandardCard
  title="Search for your publication"
>
  <form
    onSubmit={[MockFunction]}
  >
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          id="search-description"
        >
          Enter either the publication DOI (e.g. 10.1163/9789004326828), Pubmed Id (e.g. 28131963) or the title of the publication. This will allow us to check whether the record is already in eSpace or is available from another source.
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm={true}
        xs={12}
      >
        <Field
          aria-describedby="search-description"
          autoComplete="search"
          autoFocus={true}
          color="primary"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "classes": [Function],
                "help": [Function],
                "innerRef": [Function],
                "textFieldId": [Function],
              },
              "render": [Function],
            }
          }
          fullWidth={true}
          label="Enter DOI, Pubmed Id or Title"
          name="searchQuery"
          required={true}
          textFieldId="search-query"
          validate={
            Array [
              [Function],
            ]
          }
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[MockFunction]}
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</StandardCard>
`;

exports[`PublicationSearchForm renders  should display with skip search option 1`] = `
<StandardCard
  title="Search for your publication"
>
  <form
    onSubmit={[MockFunction]}
  >
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <WithStyles(ForwardRef(Typography))
          gutterBottom={true}
          id="search-description"
        >
          Enter either the publication DOI (e.g. 10.1163/9789004326828), Pubmed Id (e.g. 28131963) or the title of the publication. This will allow us to check whether the record is already in eSpace or is available from another source.
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm={true}
        xs={12}
      >
        <Field
          aria-describedby="search-description"
          autoComplete="search"
          autoFocus={true}
          color="primary"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "classes": [Function],
                "help": [Function],
                "innerRef": [Function],
                "textFieldId": [Function],
              },
              "render": [Function],
            }
          }
          fullWidth={true}
          label="Enter DOI, Pubmed Id or Title"
          name="searchQuery"
          required={true}
          textFieldId="search-query"
          validate={
            Array [
              [Function],
            ]
          }
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          color="primary"
          disabled={false}
          fullWidth={true}
          onClick={[MockFunction]}
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          fullWidth={true}
          onClick={[MockFunction]}
          variant="text"
        >
          Skip search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</StandardCard>
`;
